--- a/BuzzlogixTextAnalysisAPILib/pom.xml
+++ b/BuzzlogixTextAnalysisAPILib/pom.xml
@@ -1,7 +1,7 @@
 <!--
  - BuzzlogixTextAnalysisAPILib
  -
- - This file was automatically generated for Buzzlogix by APIMATIC BETA v2.0 on 11/18/2015
+ - This file was automatically generated for buzzlogix by APIMATIC BETA v2.0 on 11/25/2015
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
